err/tranchitella.recipe.i18n.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Chameleon-3.2.egg-info'...
Listing './lib/python3.5/site-packages/chameleon'...
Listing './lib/python3.5/site-packages/chameleon/tests'...
Listing './lib/python3.5/site-packages/chameleon/tests/inputs'...
Listing './lib/python3.5/site-packages/chameleon/tests/outputs'...
Listing './lib/python3.5/site-packages/chameleon/zpt'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tranchitella'...
Listing './lib/python3.5/site-packages/tranchitella/recipe'...
Listing './lib/python3.5/site-packages/tranchitella/recipe/i18n'...
Compiling './lib/python3.5/site-packages/tranchitella/recipe/i18n/i18ncompile.py'...
***   File "./lib/python3.5/site-packages/tranchitella/recipe/i18n/i18ncompile.py", line 22
    print 'Compiling language "%s", domain "%s"' % (language, domain)
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tranchitella/recipe/i18n/i18nextract.py'...
***   File "./lib/python3.5/site-packages/tranchitella/recipe/i18n/i18nextract.py", line 248
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tranchitella/recipe/i18n/i18nmerge.py'...
***   File "./lib/python3.5/site-packages/tranchitella/recipe/i18n/i18nmerge.py", line 22
    print 'Merging language "%s", domain "%s"' % (language, domain)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tranchitella/recipe/i18n/i18nstats.py'...
***   File "./lib/python3.5/site-packages/tranchitella/recipe/i18n/i18nstats.py", line 62
    print 'Language    Total    Done    Not Done    Fuzzy      Done %'
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tranchitella/recipe/i18n/pygettext.py'...
***   File "./lib/python3.5/site-packages/tranchitella/recipe/i18n/pygettext.py", line 401
    except getopt.error, msg:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tranchitella.recipe.i18n-0.6.egg-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
